tests/miniJava/neg/003505_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if else 0 ) { } else { } } }
